# PommerLearn

./: .gitignore  .gitlab-ci.yml  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  fix_pytorch.sh  print_versions.sh  requirements.txt  search_experiments.sh
.github/workflows/: build.yml
cpp/: Makefile
cpp/include/: crazyara_agent.h  data_representation.h  episode_info.h  ipc_manager.h  log_agent.h  pomcpp_util.h  pommerman_raw_net_agent.h  pommermanstate.h  runner.h  sample_buffer.h
cpp/src/: aggregate.cpp  aggregate.h  clonable.h  crazyara_agent.cpp  crazyara_agent.h  data_representation.cpp  data_representation.h  episode_info.h  ipc_manager.cpp  ipc_manager.h  log_agent.cpp  log_agent.h  main.cpp  pomcpp_util.cpp  pommerman_raw_net_agent.cpp  pommermanstate.cpp  pommermanstate.h  runner.cpp  runner.h  safe_ptr_queue.h  sample_buffer.cpp  sample_buffer.h
cpp/src/agents/: crazyara_agent.cpp  crazyara_agent.h  depth_switch_agent.cpp  depth_switch_agent.h  log_agent.h  mcts_crazyara_agent.cpp  raw_crazyara_agent.cpp  virtual_step_wrapper.h
cpp/src/pyinterface/: new_agent.cpp
cpp/test/: json_test.cpp  test.cpp
docker/: build.sh  cpp_eval.sh  rl_experiments.sh  rl_experiments_2.sh  run-it.sh  run.sh  search_experiments.sh
docker/tensorrt/: Dockerfile
pommerlearn/: data_augmentation.py  dataset_util.py  simple_eval.py  util.py  util_eval.py
pommerlearn/debug/: augment_debugging.py  augment_obs_debugging.py  create_dummy_model.py  plot_cnn_weights.py  replay_run.py  replay_test.py  value_prediction.py
pommerlearn/env/: env_rand_positions.py  env_util.py  replay_env.py
pommerlearn/eval/: eval.py  ffa.py  ffa_random.py
pommerlearn/examples/: cpp_eval_example.py  read_dataset.py  replay_test.py  run_episode.py  simple_eval.py
pommerlearn/nn/: PommerModel.py  a0_resnet.py  builder_util.py  rise_mobile_v3.py  simple_lstm.py
pommerlearn/paper/: .gitignore  20221231_103020_pommer_log.csv  20230123_145644_pommer_log.csv  20230130_132317_pommer_log.csv  20230205_004140_pommer_log.csv  20230208_230322_pommer_log.csv  20230216_222725_cpp_eval_combined.csv  20230220_py_eval_100.csv  matplotlib_settings.py  plot_action_distribution.py  plot_cpp_eval.py  plot_py_eval.py  plot_rl.py  plot_search_experiments.py  python_plots.py  util.py
pommerlearn/training/: metrics.py  rl_loop.py  train_cnn.py  train_util.py  util_argparse.py
pommerlearn/training/loss/: cross_entropy_continious.py  masked_continious_cross_entropy.py  masked_continuous_cross_entropy.py  masked_kl_div.py  masked_mse.py
pommerlearn/training/lr_schedules/: lr_schedules.py
